--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <link href="public/css/bundle.min.css" media="all" rel="stylesheet" type="text/css" />
+  <title>Product List</title>
 </head>
 <body>
   <div id="app" />
