--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Login form in React/Flux</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="public/css/bundle.min.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 <body>
